final for week one

--- a/homepage.html
+++ b/homepage.html
@@ -112,9 +112,23 @@
 </section>
 
 <section id="projects">
-    <p style="color: azure;">
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Expedita facere iste fuga deleniti enim molestias eligendi aperiam ipsam, nihil quia architecto eos pariatur hic nobis! Dolorum eligendi perspiciatis asperiores nisi?
-    </p>
+    <div class="pro">
+        <h1><u>MY PROJECTS</u> </h1>
+    </div>
+
+    <div class="myproj">
+        <p>This is my First Project</p>
+    </div>
+</section>
+
+<section id="contact">
+    <div class="ct">
+        <h1><u>CONTACT ME</u> </h1>
+    </div>
+
+    <div class="email">
+        <p style="color: chocolate; text-align: center;">aniketpandey651@gmail.com</p>
+    </div>
 </section>
 </body>
 </html>
