--- a/index.html
+++ b/index.html
@@ -54,13 +54,18 @@
     </div>
     
     <div class="contentbox">
-        <ul>
+<!--         <ul>
             <li>A first year undergraduate pursuing BTECH in Electronics and Communication Engeenering</li>
             <li>a struggling coder</li>
             <li>a newbie web developer</li>
             <li>and finally a aspiring youth who has a lot more to explore and dig into</li>
             
-        </ul>
+        </ul> -->
+        <p>
+            I am a second year undergraduate pursuing BTECH in Electronics and Communication Engineering.
+            I love brainstorming and solving algorithmic problems and hence find some pleasure in competive programming world.
+            In devlopment field, I am driven by my needs for a better/more usefull ones than there already are.
+        </p>
     </div>
 </section>
 
